Make nabber links link with Router (and style active links accordingly)

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,16 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Crowd Tagging</a>
+      <a class="navbar-brand">Crowd Tagging</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Transcribe</a></li>
-      <li><a href="#">Tutorial</a></li>
-      <li><a href="#">About Us</a></li>
+      <li routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">
+            <a routerLink="/">Home</a>
+      </li>
+      <li routerLinkActive="active"><a routerLink="transcribe">Transcribe</a></li>
+      <li routerLinkActive="active"><a routerLink="tutorial">Tutorial</a></li>
+      <li routerLinkActive="active"><a routerLink="about-us">About Us</a></li>
     </ul>
   </div>
 </nav>
