Set up homepage and transcribe

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,7 @@
-<nav class="navbar navbar-default">
+<nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">Crowd Tagging</a>
+      <a class="navbar-brand" href="/"><img src="../../assets/CTlogo.png">Crowd Tagging</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact: true}">
-            <a routerLink="/">Home</a>
-      </li>
-      <li routerLinkActive="active"><a routerLink="transcribe">Transcribe</a></li>
-      <li routerLinkActive="active"><a routerLink="tutorial">Tutorial</a></li>
-      <li routerLinkActive="active"><a routerLink="about-us">About Us</a></li>
-    </ul>
   </div>
 </nav>
