Relocate submit css

--- a/src/app/transcribe/transcribe.component.css
+++ b/src/app/transcribe/transcribe.component.css
@@ -79,3 +79,9 @@
     align-items: center;
     color: #f0f3f5;
 }
+
+input[type="submit"] {
+    background: none;
+    border: none;
+    width: 100%;
+}
