Include rotation, sets & update nav, gallery

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,8 +3,15 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
         <img src="../../assets/CTlogo.png">
-        Crowd Tagging
+        <div id="brandPlusProp">
+          <span id="brand">Crowd Tagging</span>
+          <span id="valueProp">Book Tagging Without The Headaches</span>
+        </div>
       </a>
     </div>
+    <!-- <div id="valueProp">
+      Book Tagging Without The Headaches
+    </div> -->
+    <button id="login">Log In</button>
   </div>
 </nav>
