--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -1,35 +1,40 @@
 <div id="container">
   <div id="viewContainer">
     <div id="viewer">
-      <img id="galleryImage">
+      <div id="rotateContainer" class="noSelect">
+        <div id="galleryImage"></div>
+      </div>
+      <img src="../../assets/rotateLeft.png" id="rotateLeft"/>
+      <img src="../../assets/rotateRight.png" id="rotateRight"/>
       <img src="../../assets/left.svg" id="prev"/>
       <img src="../../assets/right.svg"  id="next"/>
+      <div id="progress"></div>
     </div>
   </div>
   <div id="options">
-    <form> <!-- method="POST" action="#" --> 
-      <div id="dataSet">
+    <form onsubmit="return false"> <!-- method="POST" action="#" --> 
+      <div class="dataSet">
         <app-title title="Title"></app-title>
         <app-data title="Title in Native Language" labeledAs="title" highestVoted="Leaves of Grass"></app-data>
         <app-data title="Romanization" labeledAs="roman" highestVoted="Leaves of Grass"></app-data>
       </div>
-      <div id="dataSet">
+      <div class="dataSet">
         <app-title title="Author"></app-title>
         <app-data title="First Name" labeledAs="firstName" highestVoted="Walt"></app-data>
         <app-data title="Last Name" labeledAs="lastName" highestVoted="Whitman"></app-data>
       </div>
-      <div id="dataSet">
+      <div class="dataSet">
         <app-title title="Publisher"></app-title>
         <app-data title="Company" labeledAs="company" highestVoted="Thayer and Elridge"></app-data>
         <app-data title="City" labeledAs="city" highestVoted="New York City"></app-data>
         <app-data title="Country" labeledAs="country" highestVoted="United States"></app-data>
         <app-data title="Year" labeledAs="year" highestVoted="1860"></app-data>
       </div>
-      <div id="dataSet">
+      <div class="dataSet">
         <app-title title="Number of Pages"></app-title>
         <app-data title="Pages" labeledAs="pages" highestVoted="394"></app-data>
       </div>
-      <div id="dataSet">
+      <div class="dataSet">
         <app-title title="Genre"></app-title>
         <app-data title="Genre" labeledAs="genre" highestVoted="Fantasy"></app-data>
       </div>
