--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,15 +3,15 @@ a {
     padding: 0px;
 }
 
-a, button, .container-fluid {
+.container-fluid {
     width: 100%;
 }
 
-a, div, ul, .navbar-header {
+a, div, .navbar-header {
     padding: 0px;
 }
 
-a, .container-fluid, .navbar-nav > li {
+a, .container-fluid {
     align-items: center;
     display: flex;
 }
@@ -26,30 +26,21 @@ button {
 }
 
 img {
-    display: inline;
     min-height: 65px;
     min-width: 95px;
     padding: 2% 0;
     padding-right: 3.5%;
     width: 18%;
+    height: 90%;
 }
 
-img, ul, .container-fluid, .navbar-brand, .navbar-header {
+.container-fluid, .navbar-brand, .navbar-header {
     height: 100%;
-}
-
-ul {
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 5%;
-}
-
-ul, .navbar-header {
-    width: 50%;
 }
 
 .container-fluid {
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);  
+    justify-content: space-between;
 }
 
 .navbar > .container-fluid > .navbar-header > .navbar-brand {
@@ -64,13 +55,40 @@ ul, .navbar-header {
 }
 
 .navbar-brand {
+    color: #f0f3f5;
     font-size: 2.5rem;
-    padding-left: 8%;
-    color: white;
 }
 
-.navbar-nav > li {
+.navbar-header{
+    /* width: 260px; */
+    width: 30%;
+}
+
+#login {
+    width: 13%;
+    height: 70%;
+    margin-left: 40%;
+    font-size: 1.7rem;
+}
+
+#valueProp {
+    color: #f0f3f5;
+    font-size: 1.2rem;
+    /* font-size: 1.8rem; */
+    /* text-align: center; */
+    /* width: 50%; */
+    height: 30%;
+}
+
+#brandPlusProp {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 25%;
+    height: 100%;
+    justify-content: flex-start;
+}
+
+#brand {
+    line-height: 200%;
+    height: 60%;
+    vertical-align: middle;
 }
