--- a/src/app/transcribe/transcribe.component.css
+++ b/src/app/transcribe/transcribe.component.css
@@ -31,12 +31,12 @@
     margin-top: -35px;
 }
 
-#prev {
+#prev, #rotateLeft {
     left: 3%;
     transform: translate(-160%);
 }
 
-#next {
+#next, #rotateRight {
     right: 3%;
     transform: translate(160%);
 }
@@ -53,30 +53,23 @@
     top: 5%;
 }
 
-#rotateLeft {
-    left: 3%;
-    transform: translate(-160%);
-}
-
-#rotateRight {
-    right: 3%;
-    transform: translate(160%);
-}
-
 #progress {
     width: 100%;
     position: relative;
     top: 90%;
     height: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     z-index: 1;
     color: grey;
     font-size: 2rem;
     letter-spacing: 5px;
     transform: translateY(100%);
     transition: transform 111ms linear;
+}
+
+#progress, #viewer, #submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #viewContainer {
@@ -90,8 +83,6 @@
 #viewer {
     position: relative;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
     background-color: black;
 }
 
@@ -119,9 +110,6 @@
     height: 10%;
     min-height:40px;
     margin-bottom: 1%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #f0f3f5;
 }
 
