--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,10 +4,14 @@ button {
     border-style: none;
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);  
     color: #f0f3f5;
-    font-size: 2rem;
+    font-size: 2.2rem;
     margin: 0 auto;
     min-width: 262px;
     width: 20%;
+}
+
+button:focus {
+    outline: none;
 }
 
 img {
@@ -44,10 +48,50 @@ img {
 }
 
 #para {
-    margin: auto 0;
     min-width: 262px;
-    text-align: center; 
     width:  25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tooltip {
+    display: block;
+    border-bottom: 1px dotted black;
+    opacity: 1;
+    position: relative;
+    background-color: #495867;
+    text-align: center;
+    font-size: 2rem;
+    color: #f0f3f5;
+    font-family: Lato;
+    line-height: 300%;
+    width: 60%;
+    height: 30%;
+    border-radius: 20px;
+    border-style: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 190%;
+    background-color: gray;
+    color: white;
+    text-align: center;
+    border-radius: 6px;
+    padding: 10%;
+    height: auto;
+    line-height: 2rem;
+    position: absolute;
+    left: 120%;
+    top: 0%;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
 
 #topHalf {
