--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,32 @@
 <div class="container">
   <div id="topHalf">
     <div id="logo"><img src="../../assets/CrowdTaggingLogo.png"></div>
-    <!--<div>
-        {{ (author | async)?.first_name }}
-    </div>
-    <ul>
-     <li *ngFor="let author of authors | async">
-            {{ author.first_name }}
-     </li>
-    </ul>-->
     <div id="para">
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Sed mattis maximus nunc, et finibus nibh sodales sit amet. 
-        Etiam pellentesque enim at dolor placerat, luctus condimentum tortor tristique. 
-        Nam neque nisl, lacinia nec est in, interdum ultricies massa. 
-        Mauris vitae luctus velit. Donec laoreet lacinia orci ut vestibulum. 
-        Praesent congue quam id justo lacinia, pellentesque tristique leo blandit. 
-      </span>
+      <div class="tooltip">
+        About
+        <span class="tooltiptext">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type 
+            specimen book. It has survived not only five centuries, but also the leap into 
+            electronic typesetting, remaining essentially unchanged. 
+        </span>
+      </div>
+      <div class="tooltip">
+        HowTo
+        <span class="tooltiptext">Tooltip text</span>
+      </div>
+      <div class="tooltip">
+        Members
+        <span class="tooltiptext">
+          Ankur - Project Manager <br>
+          Hirday - Team Member <br>
+          Jorge - Team Member <br>
+          Jun - Team Member <br>
+          Kristie - Team Member <br>
+          Peter - Supervisor <br>
+        </span>
+      </div>
     </div>
   </div>
   <div id="bottomHalf" routerLinkActive="active"><button routerLink="transcribe">Get Started!</button></div>
