Show X highest-voted responses Pt. 2

--- a/src/app/transcribe/transcribe.component.css
+++ b/src/app/transcribe/transcribe.component.css
@@ -117,3 +117,80 @@ input[type="submit"] {
     border: none;
     width: 100%;
 }
+
+.chkbox-label{
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    user-select: none;
+    padding-bottom: 8px;
+}
+
+.chkbox-input{
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.chkbox-label span:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 3px;
+    margin-top: 2px;
+    -webkit-transition: .2s;
+    transition: .2s;
+    box-shadow: inset 0px 2px 3px #aaa;
+    background-color: white; 
+}
+
+.chkbox-input:checked ~ span:after{
+    content: "";
+    position: absolute;
+    display: block;
+    left: 5px;
+    top: 3px;
+    width: 6px;
+    height: 10px;
+    border: solid #666;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.data {
+    background-color: #ddd;
+    min-height: 110px;
+    padding: 3% 8%;
+    border-bottom: 1px #808080 solid;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.ital {
+    font-style: italic;
+    margin-bottom: 2%;
+    margin-left: -3px;
+    font-size: 18px;
+}
+
+label {
+    font-weight: normal;
+}
+
+input[type="text"] {
+    height:30px;
+    border-radius: 10px;
+    border: none;
+    font-size: 13px;
+    box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25) inset;  
+    padding-left: 4%;
+    margin-left: -2px;
+    width: 85%;
+}
