Added Login Functionality & 2 User Types

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,5 +29,5 @@
       </div>
     </div>
   </div>
-  <div id="bottomHalf" routerLinkActive="active"><button routerLink="transcribe">Get Started!</button></div>
+  <div id="bottomHalf" routerLinkActive="active"><button routerLink="transcribe" (click)="login()">Get Started!</button></div>
 </div>
