Roles now persist on re-entry

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div *ngIf="user; else loginTemplate" id="bottomHalf" routerLinkActive="active">
-    <button routerLink="transcribe">Start Tagging!</button>
+    <button routerLink="transcribe">Continue Tagging!</button>
   </div>
   
 </div>
