--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,24 @@
       <div class="tooltip">
         About
         <span class="tooltiptext">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-            when an unknown printer took a galley of type and scrambled it to make a type 
-            specimen book. It has survived not only five centuries, but also the leap into 
-            electronic typesetting, remaining essentially unchanged. 
+            Crowd Tagging is an application that allows you to tag books without all the
+            headaches that usually accompany the task. You can label key characteristics of any
+            book in our database with ease. You have the option of voting on already existing
+            transcriptions or adding your very own.
         </span>
       </div>
       <div class="tooltip">
         HowTo
-        <span class="tooltiptext">Tooltip text</span>
+        <span class="tooltiptext">
+          You can signup or login above in the navigation bar. Once you
+          signin, you will be redirected to our transcription page where you can start participating
+          in the transcription process. You will notice a set of images on the left hand side and a 
+          set of options on the right hand side. These represent the different features of the book
+          that you can tag. For example, title, author, publisher data, and so on. You can select a 
+          predefined tag or you can add your own. Once you select one for each feature, click the submit
+          button at the bottom of the page to save your work. You must select at least one option for
+          each feature to be eligible to save your work.
+        </span>
       </div>
       <div class="tooltip">
         Members
