--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -60,13 +60,15 @@ button {
 }
 
 .navbar-header{
-    width: 30%;
+    width: 40%;
+    margin-left: 2%;
 }
 
 #login {
     width: 13%;
     height: 70%;
-    margin-left: 40%;
+    margin-left: 30%;
+    margin-right: 2.2%;
     font-size: 2rem;
 }
 
@@ -93,15 +95,27 @@ button {
     vertical-align: middle;
 }
 
+.dropdown-content > button {
+    all: unset;
+    border-style: none;
+    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25); 
+    font-size: 1.5rem;
+    background-color: #f9f9f9;
+    text-align: center;
+    min-width: 160px;
+    height: 40%;
+}
+
+.dropdown-content > button:hover {
+    background-color: #d8d7d7;
+}
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    transform: translateY(60px);
     z-index: 1000000000;
+    transform: translateY(100%);
+    height: 100%;
 }
 
 .dropdown:hover .dropdown-content {
@@ -116,11 +130,16 @@ button {
     justify-content: flex-end;
     align-items: center;
     width: 13%;
-    height: 90%;
+    height: 100%;
     margin-left: 40%;
 }
 
+.dropdown:hover img{
+    opacity: 0.8;
+}
+
 #user {
-    height: 90%;
+    height: 85%;
     border-radius: 50%;
+    margin-right: 25%;
 }
