--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -19,22 +19,46 @@
 
         <div class="data">
           <div class="ital">Title in Native Language</div>
-          <div *ngFor="let title of titles | async">
-            <label class="chkbox-label" for="{{title.name}}">
+          <div class="dataPoint" *ngFor="let title of titles | async" (mouseenter)="title.hovering = !title.edit" (mouseleave)="title.hovering = false">
+            <label class="chkbox-label" for="{{title.name}}" *ngIf="!title.edit">
               <input type="radio" class="chkbox-input" name="title" id="{{title.name}}">
               <span>{{title.name}}</span>
             </label>
+            <div *ngIf="title.edit">
+              <label class="chkbox-label" for="edit{{title.name}}">
+                  <input type="radio" class="chkbox-input" id="edit{{title.name}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{title.name}}" value="{{title.name}}">
+              <span class="glyphicon glyphicon-ok" (click)="title.edit = false; set('titles', title.id, 'name', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && title.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="title.edit = true; title.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('titles', title.id)"></span>
+            </div>
           </div>
           <app-addOption title="title"></app-addOption>
         </div>
 
         <div class="data">
           <div class="ital">Romanization</div>
-          <div *ngFor="let roman of romans | async">
-            <label class="chkbox-label" for="{{roman.name}}">
+          <div class="dataPoint" *ngFor="let roman of romans | async" (mouseenter)="roman.hovering = !roman.edit" (mouseleave)="roman.hovering = false">
+            <label class="chkbox-label" for="{{roman.name}}" *ngIf="!roman.edit">
               <input type="radio" class="chkbox-input" name="roman" id="{{roman.name}}">
               <span>{{roman.name}}</span>
             </label>
+            <div *ngIf="roman.edit">
+              <label class="chkbox-label" for="edit{{roman.name}}">
+                  <input type="radio" class="chkbox-input" id="edit{{roman.name}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{roman.name}}" value="{{roman.name}}">
+              <span class="glyphicon glyphicon-ok" (click)="roman.edit = false; set('romans', roman.id, 'name', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && roman.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="roman.edit = true; roman.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('romanization', roman.id)"></span>
+            </div>
           </div>
           <app-addOption title="roman"></app-addOption>
         </div>
@@ -47,24 +71,53 @@
         <div class="data">
           <div class="ital">First Name</div>
           <div *ngFor="let author of authors | async">
-            <label class="chkbox-label" for="{{author.first_name}}">
+          <div class="dataPoint" *ngIf="author.first_name" (mouseenter)="author.hovering = !author.edit" (mouseleave)="author.hovering = false">
+            <label class="chkbox-label" for="{{author.first_name}}" *ngIf="!author.edit">
               <input type="radio" class="chkbox-input" name="firstName" id="{{author.first_name}}">
               <span>{{author.first_name}}</span>
             </label>
+            <div *ngIf="author.edit">
+              <label class="chkbox-label" for="edit{{author.first_name}}">
+                  <input type="radio" class="chkbox-input" id="edit{{author.first_name}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{author.first_name}}" value="{{author.first_name}}">
+              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('authors', author.id, 'first_name', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && author.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="author.edit = true; author.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('authors', author.id, 'first_name')"></span>
+            </div>
           </div>
+        </div>
           <app-addOption title="firstName"></app-addOption>
         </div>
 
         <div class="data">
           <div class="ital">Last Name</div>
           <div *ngFor="let author of authors | async">
-            <label class="chkbox-label" for="{{author.last_name}}">
+          <div class="dataPoint" *ngIf="author.last_name" (mouseenter)="author.hovering = !author.edit" (mouseleave)="author.hovering = false">
+            <label class="chkbox-label" for="{{author.last_name}}" *ngIf="!author.edit">
               <input type="radio" class="chkbox-input" name="lastName" id="{{author.last_name}}">
               <span>{{author.last_name}}</span>
             </label>
+            <div *ngIf="author.edit">
+              <label class="chkbox-label" for="edit{{author.last_name}}">
+                  <input type="radio" class="chkbox-input" id="edit{{author.last_name}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{author.last_name}}" value="{{author.last_name}}">
+              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('authors', author.id, 'last_name', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && author.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="author.edit = true; author.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('authors', author.id)"></span>
+            </div>
           </div>
+        </div>
           <app-addOption title="lastName"></app-addOption>
         </div>
+      
       </div>
 
       <!-- Publisher Dataset-->
@@ -74,32 +127,74 @@
         <div class="data">
           <div class="ital">Company</div>
           <div *ngFor="let publisher of publishers | async">
-            <label class="chkbox-label" for="{{publisher.company}}">
+          <div class="dataPoint" *ngIf="publisher.company" (mouseenter)="publisher.hovering = !publisher.edit" (mouseleave)="publisher.hovering = false">
+            <label class="chkbox-label" for="{{publisher.company}}" *ngIf="!publisher.edit">
               <input type="radio" class="chkbox-input" name="company" id="{{publisher.company}}">
               <span>{{publisher.company}}</span>
             </label>
+            <div *ngIf="publisher.edit">
+              <label class="chkbox-label" for="edit{{publisher.company}}">
+                  <input type="radio" class="chkbox-input" id="edit{{publisher.company}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{publisher.company}}" value="{{publisher.company}}">
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, 'company', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('publishers', publisher.id, 'company')"></span>
+            </div>
           </div>
+        </div>
           <app-addOption title="company"></app-addOption>
         </div>
 
         <div class="data">
           <div class="ital">City</div>
           <div *ngFor="let publisher of publishers | async">
-            <label class="chkbox-label" for="{{publisher.city}}">
+          <div class="dataPoint" *ngIf="publisher.city" (mouseenter)="publisher.hovering = !publisher.edit" (mouseleave)="publisher.hovering = false">
+            <label class="chkbox-label" for="{{publisher.city}}" *ngIf="!publisher.edit">
               <input type="radio" class="chkbox-input" name="city" id="{{publisher.city}}">
               <span>{{publisher.city}}</span>
             </label>
+            <div *ngIf="publisher.edit">
+              <label class="chkbox-label" for="edit{{publisher.city}}">
+                  <input type="radio" class="chkbox-input" id="edit{{publisher.city}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{publisher.city}}" value="{{publisher.city}}">
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, 'city', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('publishers', publisher.id, 'city')"></span>
+            </div>
           </div>
+        </div>
           <app-addOption title="city"></app-addOption>
         </div>
 
         <div class="data">
           <div class="ital">Country</div>
           <div *ngFor="let publisher of publishers | async">
-            <label class="chkbox-label" for="{{publisher.country}}">
+          <div class="dataPoint" *ngIf="publisher.country" (mouseenter)="publisher.hovering = !publisher.edit" (mouseleave)="publisher.hovering = false">
+            <label class="chkbox-label" for="{{publisher.country}}" *ngIf="!publisher.edit">
               <input type="radio" class="chkbox-input" name="country" id="{{publisher.country}}">
               <span>{{publisher.country}}</span>
             </label>
+            <div *ngIf="publisher.edit">
+              <label class="chkbox-label" for="edit{{publisher.country}}">
+                  <input type="radio" class="chkbox-input" id="edit{{publisher.country}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{publisher.country}}" value="{{publisher.country}}">
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, 'country', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('publishers', publisher.id, 'country')"></span>
+            </div>
+          </div>
           </div>
           <app-addOption title="country"></app-addOption>
         </div>
@@ -107,10 +202,24 @@
         <div class="data">
           <div class="ital">Year</div>
           <div *ngFor="let publisher of publishers | async">
-            <label class="chkbox-label" for="{{publisher.year}}">
+          <div class="dataPoint" *ngIf="publisher.year" (mouseenter)="publisher.hovering = !publisher.edit" (mouseleave)="publisher.hovering = false">
+            <label class="chkbox-label" for="{{publisher.year}}" *ngIf="!publisher.edit">
               <input type="radio" class="chkbox-input" name="year" id="{{publisher.year}}">
               <span>{{publisher.year}}</span>
             </label>
+            <div *ngIf="publisher.edit">
+              <label class="chkbox-label" for="edit{{publisher.year}}">
+                  <input type="radio" class="chkbox-input" id="edit{{publisher.year}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{publisher.year}}" value="{{publisher.year}}">
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, 'year', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('publishers', publisher.id, 'year')"></span>
+            </div>
+          </div>
           </div>
           <app-addOption title="year"></app-addOption>
         </div>
@@ -122,11 +231,23 @@
 
         <div class="data">
           <div class="ital">Pages</div>
-          <div *ngFor="let page of pages | async">
-            <label class="chkbox-label" for="{{page.number}}">
+          <div class="dataPoint" *ngFor="let page of pages | async" (mouseenter)="page.hovering = !page.edit" (mouseleave)="page.hovering = false">
+            <label class="chkbox-label" for="{{page.number}}" *ngIf="!page.edit">
               <input type="radio" class="chkbox-input" name="page" id="{{page.number}}">
               <span>{{page.number}}</span>
             </label>
+            <div *ngIf="page.edit">
+              <label class="chkbox-label" for="edit{{page.number}}">
+                  <input type="radio" class="chkbox-input" id="edit{{page.number}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{page.number}}" value="{{page.number}}">
+              <span class="glyphicon glyphicon-ok" (click)="page.edit = false; set('pages', page.id, 'number', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && page.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="page.edit = true; page.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('pages', page.id)"></span>
+            </div>
           </div>
           <app-addOption title="page"></app-addOption>
         </div>
@@ -138,11 +259,23 @@
 
         <div class="data">
           <div class="ital">Genre</div>
-          <div *ngFor="let genre of genres | async">
-            <label class="chkbox-label" for="{{genre.name}}">
+          <div class="dataPoint" *ngFor="let genre of genres | async" (mouseenter)="genre.hovering = !genre.edit" (mouseleave)="genre.hovering = false">
+            <label class="chkbox-label" for="{{genre.name}}" *ngIf="!genre.edit">
               <input type="radio" class="chkbox-input" name="genre" id="{{genre.name}}">
               <span>{{genre.name}}</span>
             </label>
+            <div *ngIf="genre.edit">
+              <label class="chkbox-label" for="edit{{genre.name}}">
+                  <input type="radio" class="chkbox-input" id="edit{{genre.name}}" name="title">
+                  <span></span>
+              </label>  
+              <input type="text" class="modified" name="edit{{genre.name}}" value="{{genre.name}}">
+              <span class="glyphicon glyphicon-ok" (click)="genre.edit = false; set('genres', genre.id, 'name', $event.target.previousElementSibling.value)"></span>
+            </div>
+            <div class="iconContainer" *ngIf="isAdmin() && genre.hovering">
+              <span class="pencil glyphicon glyphicon-pencil" (click)="genre.edit = true; genre.hovering = false"></span>
+              <span class="ex glyphicon glyphicon-remove" (click)="delete('genres', genre.id)"></span>
+            </div>
           </div>
           <app-addOption title="genre"></app-addOption>
         </div>
