--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <span class="tooltiptext">
             Crowd Tagging is an application that allows you to tag books without all the
             headaches that usually accompany the task. You can label key characteristics of any
-            book in our database with ease. You have the option of voting on already existing
+            book in our database with ease. You have the option of voting on preexisting
             transcriptions or adding your very own.
         </span>
       </div>
