--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -25,23 +25,23 @@
     </div>
 
     <div class="data hidden">
-      <div class="ital">Romanization: <span>{{book.roman}}</span></div>
+      <div id="ital">Romanization: <span>{{book.roman}}</span></div>
     </div>
 
     <div class="data hidden">
-      <div class="ital">Author: <span>{{book.author.last_name}}, {{book.author.first_name}} </span></div>
+      <div id="ital">Author: <span>{{book.author.last_name}}, {{book.author.first_name}} </span></div>
     </div>
 
     <div class="data hidden">
-      <div class="ital">Publisher: <span>{{book.publisher.company}}, {{book.publisher.city}}, {{book.publisher.country}}, {{book.publisher.year}}</span></div>
+      <div id="ital">Publisher: <span>{{book.publisher.company}}, {{book.publisher.city}}, {{book.publisher.country}}, {{book.publisher.year}}</span></div>
     </div>
 
     <div class="data hidden">
-      <div class="ital">Genre: <span>{{book.genre}}</span></div>
+      <div id="ital">Genre: <span>{{book.genre}}</span></div>
     </div>
 
     <div class="data hidden">
-      <div class="ital">Pages: <span>{{book.pages}}</span></div>
+      <div id="ital">Pages: <span>{{book.pages}}</span></div>
     </div>
   </div>
   
