Reset Fields on Submission + Small UI Changes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -65,7 +65,7 @@ img {
     text-align: center;
     font-size: 2rem;
     color: #f0f3f5;
-    font-family: Lato;
+    font-family: Poppins;
     line-height: 300%;
     width: 60%;
     height: 30%;
