--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div id="options">
-    <form onsubmit="return false"> <!-- method="POST" action="#" -->
+    <form onsubmit="return false">
       <!-- Title Dataset-->
       <div class="dataSet">
         <app-title title="Title"></app-title>
